--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -83,6 +83,7 @@ STYLE SHEET INDEX END
 @import "components/testimonial";
 @import "components/aboutUs";
 @import "components/latestNews";
+@import "components/counter";
 
 /****************************************************
                  Footer Styles
