--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -84,6 +84,8 @@ STYLE SHEET INDEX END
 @import "components/aboutUs";
 @import "components/latestNews";
 @import "components/counter";
+@import "components/workStation";
+@import "components/teamSection";
 
 /****************************************************
                  Footer Styles
