--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -86,6 +86,7 @@ STYLE SHEET INDEX END
 @import "components/counter";
 @import "components/workStation";
 @import "components/teamSection";
+@import "components/brandLogo";
 
 /****************************************************
                  Footer Styles
