--- a/public/assets/scss/components/_aboutUs.scss
+++ b/public/assets/scss/components/_aboutUs.scss
@@ -174,6 +174,9 @@
 
 .companyInfoSection {
   margin: 120px 0;
+  @media #{$md-layout-device}{
+    margin: 65px 0;
+  }
   .wrapper {
     .leftSide {
       .wrapperData {
@@ -192,10 +195,21 @@
     }
     .rightSide {
       padding-left: 55px;
+      @media #{$md-layout-device}{
+        margin-top: 20px;
+        padding: 0 20px;
+      }
       .wrapperData {
         h2 {
           font-size: 40px;
           font-weight: 600;
+          margin-top: 14px;
+          @media #{$md-layout-device} {
+            font-size: 30px;
+          }
+          @media #{$sm-layout-device} {
+            font-size: 27px;
+          }
         }
         .text_1 {
           margin-top: 30px;
@@ -260,6 +274,16 @@
             padding: 0;
           }
         }
+    }
+    .rightSide{
+      img{
+        @media #{$md-layout-device}{
+          margin-top: 20px;
+        }
+        @media #{$sm-layout-device}{
+          margin-top: 20px;
+        }
+      }
     }
   }
 }
