--- a/public/assets/scss/components/_teamSection.scss
+++ b/public/assets/scss/components/_teamSection.scss
@@ -1,5 +1,11 @@
 .teamSection {
   padding: 120px 0;
+  @media #{$md-layout-device}{
+    padding: 70px 0;
+  }
+  @media #{$sm-layout-device}{
+    padding: 60px 0;
+  }
   .wrapper {
     .part_1 {
       text-align: center;
