add service page

--- a/public/assets/scss/components/_brandLogo.scss
+++ b/public/assets/scss/components/_brandLogo.scss
@@ -38,6 +38,7 @@
         .iconLogo {
           .listData {
             ul {
+                padding-left: 0;
               display: flex;
               justify-content: center;
               align-items: center;
