--- a/public/assets/scss/components/_priceingTable.scss
+++ b/public/assets/scss/components/_priceingTable.scss
@@ -2,7 +2,7 @@
   margin-top: 100px;
   .headerOption {
     text-align: center;
-    h1 { 
+    h1 {
       font-size: 15px;
       font-weight: 600;
       color: var(--primary-theme-color);
@@ -61,6 +61,8 @@
     margin-top: 65px;
     margin-bottom: 50px;
     .pricing_table_body {
+      padding-right: 15px;
+      padding-left: 15px;
       .wrapper {
         position: relative;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.19);
@@ -68,13 +70,21 @@
         border-radius: 10px;
         // margin: 0 8px;
         background: #ffffffbd;
-        h3 {
+        .post {
+          font-size: 40px;
+        }
+        .price {
+          font-size: 40px;
+          color: var(--primary-theme-color);
+          font-weight: 700;
+        }
+        .title {
           font-size: 18px;
           font-weight: 600;
           margin-top: 24px;
           line-height: 24px;
         }
-        p {
+        .des {
           font-size: 15px;
           line-height: 25px;
           margin-top: 17px;
@@ -82,41 +92,17 @@
         .btn-transparent {
           margin-top: 7px;
         }
+        img {
+          width: 120px;
+          padding: 13px 0;
+        }
         .overlay {
           position: absolute;
           top: 22px;
           right: 35px;
-          color: #fff;
+          color: rgb(46, 46, 46);
           z-index: 999;
-          transform: rotate(41deg);
           font-size: 20px;
-        }
-        &::after {
-          position: absolute;
-          clip-path: polygon(46% 0%, 100% 33%, 100% 0);
-          background: var(--primary-theme-color);
-          width: 100%;
-          height: 100%;
-          z-index: 99;
-          content: "Hello";
-          color: #fff;
-          top: 0;
-          border-radius: 10px;
-          right: 0;
-          visibility: hidden;
-          opacity: 0;
-          transition: all 0.3s linear;
-
-          @media #{$sm-layout-device} {
-            visibility: visible;
-            opacity: 1;
-          }
-        }
-        &:hover {
-          &::after {
-            visibility: visible;
-            opacity: 1;
-          }
         }
       }
       @media #{$md-layout-device} {
