add service page

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -87,6 +87,7 @@ STYLE SHEET INDEX END
 @import "components/workStation";
 @import "components/teamSection";
 @import "components/brandLogo";
+@import "components/newsLetter";
 
 /****************************************************
                  Footer Styles
