add service details page

--- a/public/assets/scss/components/_newsLetter.scss
+++ b/public/assets/scss/components/_newsLetter.scss
@@ -4,6 +4,7 @@
   background: #1b1b1b;
   @media #{$sm-layout-device} {
     padding: 60px 0;
+    margin: 65px 0; 
   }
   .wrapper {
     padding: 0 150px;
