--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -88,6 +88,8 @@ STYLE SHEET INDEX END
 @import "components/teamSection";
 @import "components/brandLogo";
 @import "components/newsLetter";
+@import "components/blog";
+@import "components/blogDetails";
 
 /****************************************************
                  Footer Styles
