--- a/public/assets/scss/components/_latestNews.scss
+++ b/public/assets/scss/components/_latestNews.scss
@@ -1,9 +1,9 @@
 .latestNews {
   background: #f8f9fb;
   padding: 100px 0;
-  .wrapper {  
+  .wrapper {
     .part_1 {
-      .wrapperBody { 
+      .wrapperBody {
         text-align: center;
         h1 {
           font-size: 15px;
@@ -37,11 +37,12 @@
     .part_2 {
       margin-top: 70px;
       .wrapperBody {
-        @media #{$md-layout-device}{
+        margin-bottom: 30px;
+        @media #{$md-layout-device} {
           margin-bottom: 30px;
           text-align: center;
         }
-        @media #{$sm-layout-device}{
+        @media #{$sm-layout-device} {
           margin-bottom: 30px;
           text-align: center;
         }
@@ -55,10 +56,10 @@
             img {
               transition: all 0.5s linear;
               height: 496px;
-              @media #{$md-layout-device}{
+              @media #{$md-layout-device} {
                 height: auto;
               }
-              @media #{$sm-layout-device}{
+              @media #{$sm-layout-device} {
                 height: auto;
               }
             }
@@ -140,6 +141,48 @@
             .overlay p {
               visibility: visible;
               opacity: 1;
+            }
+          }
+        }
+      }
+      .pagination {
+        display: flex;
+        justify-content: center;
+        ul {
+          padding-left: 0;
+          li {
+            padding: 5px;
+            display: inline-block;
+          }
+          li.active a {
+            background: var(--primary-theme-color);
+            border: 2px solid var(--primary-theme-color);
+            color: var(--color-white);
+            padding: 0 15px;
+            display: block;
+            text-align: center;
+            line-height: 40px;
+            min-width: 42px;
+            height: 42px;
+            position: relative;
+            border-radius: 5px;
+          }
+          a {
+            background: var(--color-white);
+            border: 2px solid #ddd;
+            color: var(--paragraph-color);
+            padding: 0 15px;
+            display: block;
+            text-align: center;
+            line-height: 40px;
+            min-width: 42px;
+            height: 42px;
+            position: relative;
+            border-radius: 5px;
+            &:hover {
+              background: var(--primary-theme-color);
+              border: 2px solid var(--primary-theme-color);
+              color: var(--color-white);
             }
           }
         }
