--- a/public/assets/scss/default/_quickCode.scss
+++ b/public/assets/scss/default/_quickCode.scss
@@ -3,7 +3,7 @@
 ==================================*/
 
 // Import Font
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700;1,800;1,900&display=swap");
 @media (min-width: 1200px) {
   .container {
     max-width: 1160px !important;
@@ -15,19 +15,17 @@
 
 // Scrollbar Design
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 20px;
 }
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
   // background-color: var(--primary-theme-color);
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background-image: url(https://res.cloudinary.com/amitjs/image/upload/v1651867665/ICON/teacher_1_alczaa.png);
   background-repeat: no-repeat;
 }
-
-
 
 .none {
   display: none;
@@ -38,6 +36,15 @@
 }
 .visible {
   visibility: visible;
+}
+.jCenter {
+  justify-content: center;
+}
+.jSpace {
+  justify-content: space-between;
+}
+.aCenter {
+  align-items: center;
 }
 
 .absolute {
@@ -90,17 +97,17 @@
   @extend %bgImgPosition;
 }
 
-@for $i from 1 through 8{
-    .bgImg-#{$i}{
-        background-image: url(../../images/bgImg/bgImg-#{$i}.jpg) !important;
-        background-repeat: no-repeat;
-    }
+@for $i from 1 through 8 {
+  .bgImg-#{$i} {
+    background-image: url(../../images/bgImg/bgImg-#{$i}.jpg) !important;
+    background-repeat: no-repeat;
+  }
 }
-@for $i from 1 through 4{
-    .featureImg-#{$i}{
-        background-image: url(../../images/featureHouse/featureImg-#{$i}.png) !important;
-        background-repeat: no-repeat;
-    }
+@for $i from 1 through 4 {
+  .featureImg-#{$i} {
+    background-image: url(../../images/featureHouse/featureImg-#{$i}.png) !important;
+    background-repeat: no-repeat;
+  }
 }
 
 /*===========================
