--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -63,7 +63,6 @@ STYLE SHEET INDEX END
 
 @import "footer/footer";
 
-
 /****************************************************
                  Common Styles
 *****************************************************/
@@ -90,6 +89,7 @@ STYLE SHEET INDEX END
 @import "components/newsLetter";
 @import "components/blog";
 @import "components/blogDetails";
+@import "Elements/sideBar";
 
 /****************************************************
                  Footer Styles
