--- a/public/assets/scss/components/_blogDetails.scss
+++ b/public/assets/scss/components/_blogDetails.scss
@@ -249,5 +249,74 @@
         }
       }
     }
+    .rightSide {
+      .wrapperBody {
+        padding-left: 16px;
+        .inner {
+          .form_group {
+            .form_control {
+              border-radius: 10px;
+              height: 50px;
+              padding: 0 20px;
+              margin-bottom: 20px;
+            }
+          }
+        }
+        .category {
+          border: 1px solid #ddd;
+          padding: 40px 30px;
+          border-radius: 10px;
+          h3 {
+            font-size: 30px;
+            padding-bottom: 9px;
+            position: relative;
+            margin-bottom: 28px;
+            display: inline-block;
+            &::after {
+              position: absolute;
+              content: "";
+              width: 100%;
+              height: 3px;
+              background-color: var(--primary-theme-color);
+              left: 0;
+              bottom: 0;
+            }
+          }
+          ul {
+            padding-left: 0;
+            li {
+              position: relative;
+              margin-bottom: 25px;
+              &::after {
+                position: absolute;
+                width: 0%;
+                visibility: hidden;
+                opacity: 0;
+                content: "";
+                height: 1px;
+                background-color: var(--primary-theme-color);
+                left: 0;
+                bottom: -6px;
+                transition: all 0.3s linear;
+              }
+              a {
+                color: var(--paragraph-color);
+                font-weight: 600;
+              }
+              &:hover {
+                &::after {
+                  visibility: visible;
+                  opacity: 1;
+                  width: 100%;
+                }
+                a {
+                  color: var(--primary-theme-color);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
