--- a/public/assets/scss/common/_pageIntro.scss
+++ b/public/assets/scss/common/_pageIntro.scss
@@ -20,6 +20,7 @@
     justify-content: center;
     height: 100%;
     z-index: 999;
+    position: relative;
     .titleBar {
       a,
       span {
