--- a/public/assets/scss/components/_latestNews.scss
+++ b/public/assets/scss/components/_latestNews.scss
@@ -1,6 +1,11 @@
 .latestNews {
   background: #f8f9fb;
   padding: 100px 0;
+  @media #{$md-layout-device} {
+  }
+  @media #{$sm-layout-device} {
+    padding: 0;
+  }
   .wrapper {
     .part_1 {
       .wrapperBody {
