--- a/public/assets/scss/components/_newsLetter.scss
+++ b/public/assets/scss/components/_newsLetter.scss
@@ -4,7 +4,7 @@
   background: #1b1b1b;
   @media #{$sm-layout-device} {
     padding: 60px 0;
-    margin: 65px 0; 
+    margin: 65px 0;
   }
   .wrapper {
     padding: 0 150px;
@@ -27,6 +27,11 @@
         margin: 0 auto;
         width: 400px;
         display: flex;
+        @media #{$md-layout-device} {
+        }
+        @media #{$sm-layout-device} {
+          width: auto;
+        }
       }
       .email {
         border-radius: 50px 0px 0 50px;
