--- a/public/assets/scss/components/_serviceOption.scss
+++ b/public/assets/scss/components/_serviceOption.scss
@@ -81,6 +81,7 @@
   background: #f8f9fb;
   padding: 120px 0;
   .wrapper {
+    margin: auto;
     .part_1 {
       text-align: center;
       h1 {
