--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -89,6 +89,7 @@ STYLE SHEET INDEX END
 @import "components/newsLetter";
 @import "components/blog";
 @import "components/blogDetails";
+@import "components/portfolio";
 @import "Elements/sideBar";
 
 /****************************************************
