--- a/public/assets/scss/components/_blogDetails.scss
+++ b/public/assets/scss/components/_blogDetails.scss
@@ -398,6 +398,7 @@
           }
           ul {
             padding-left: 0;
+            margin-top: 20px;
             li {
               position: relative;
               margin-bottom: 25px;
