--- a/public/assets/scss/components/_portfolio.scss
+++ b/public/assets/scss/components/_portfolio.scss
@@ -50,9 +50,31 @@
             border-radius: 10px;
           }
         }
+        @media #{$md-layout-device} {
+          .imgSection {
+            text-align: center;
+            img {
+              margin-bottom: 20px;
+            }
+          }
+        }
+        @media #{$sm-layout-device} {
+          .imgSection {
+            text-align: center;
+            img {
+              margin-bottom: 20px;
+            }
+          }
+        }
       }
       .part_2 {
         margin-top: 70px;
+        @media #{$md-layout-device} {
+          margin-top: 50px;
+        }
+        @media #{$sm-layout-device} {
+          margin-top: 30px;
+        }
         .cardItem {
           background-color: #ffece3a8;
           border-radius: 10px;
@@ -73,6 +95,12 @@
           }
         }
         .descriptionSection {
+          @media #{$md-layout-device} {
+            margin-top: 50px;
+          }
+          @media #{$sm-layout-device} {
+            margin-top: 30px;
+          }
           .textBig {
             font-size: 18px;
           }
@@ -81,6 +109,12 @@
           }
           .points {
             display: flex;
+            @media #{$md-layout-device} {
+              display: block;
+            }
+            @media #{$sm-layout-device} {
+              display: block;
+            }
             ul {
               margin-right: 60px;
             }
@@ -98,11 +132,24 @@
           .boxItem {
             display: flex;
             justify-content: space-between;
+            @media #{$md-layout-device} {
+              display: block;
+            }
+            @media #{$sm-layout-device} {
+              display: block;
+            }
             .items {
               padding: 35px 20px;
               width: 235px;
               border: 1px solid #ddd;
               border-radius: 10px;
+              @media #{$md-layout-device} {
+                margin: 0 10px;
+              }
+              @media #{$sm-layout-device} {
+                width: auto;
+                margin-bottom: 30px;
+              }
               .count {
                 width: 80px;
                 height: 80px;
@@ -132,6 +179,13 @@
         margin-top: 80px;
         h2 {
           font-size: 40px;
+          font-weight: 600;
+          @media #{$md-layout-device} {
+            font-size: 30px;
+          }
+          @media #{$sm-layout-device} {
+            font-size: 25px;
+          }
         }
       }
     }
