--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -84,12 +84,13 @@ STYLE SHEET INDEX END
 @import "components/latestNews";
 @import "components/counter";
 @import "components/workStation";
-@import "components/teamSection";
+@import "components/team";
 @import "components/brandLogo";
 @import "components/newsLetter";
 @import "components/blog";
 @import "components/blogDetails";
 @import "components/portfolio";
+@import "components/error404";
 @import "Elements/sideBar";
 
 /****************************************************
